typescript/checker/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts.stderr
error: TS2389 {
    span: Span {
        lo: BytePos(
            77,
        ),
        hi: BytePos(
            79,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts:5:17
  |
5 |    abstract get aa() { return 1; } // error
  |                 ^^

error: TS2389 {
    span: Span {
        lo: BytePos(
            153,
        ),
        hi: BytePos(
            155,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts:7:17
  |
7 |    abstract set bb(x: string) {} // error
  |                 ^^

